syntax = "proto3";

import "base.proto";
import "google/protobuf/timestamp.proto";

package game;

// Services
service GameService {
  rpc GetGames(GetGamesRequest) returns (GetGamesReply){}
  rpc SaveGame(SaveGameRequest) returns (SaveGameReply){}
  rpc GetGamesById(GetGamesByPlayerIdRequest) returns (GetGamesByPlayerIdReply) {}
  rpc GetWinProbability(GetWinProbabilityRequest) returns (GetWinProbabilityReply) {}
}

// Get Games
message GetGamesRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message GetGamesReply {
  repeated GameModel gameModel = 1;
}

message GetGamesByPlayerIdRequest {
  string id = 1;
}
message GetGamesByPlayerIdReply {
  repeated GameModel gameModel = 1;
}

// Get win probability
message GetWinProbabilityRequest {
  int32 homeTeamElo = 1;
  int32 awayTeamElo = 2;
}
message GetWinProbabilityReply {
  double winProbability = 1;
}

// Save Games
message SaveGameRequest {
  GameModel gameModel = 1;
}

message SaveGameReply {
  GameModel gameModel = 1;
}

// Models
message GameModel {
  string id = 1;
  google.protobuf.Timestamp timeStamp = 2;
  repeated string homeTeamIds = 3;
  repeated string awayTeamIds = 4;
  repeated base.SetModel sets = 5;
}



